--- a/style.css
+++ b/style.css
@@ -1,33 +1,7 @@
-/* 共通のスタイル */
-body {
-    font-family: Arial, sans-serif;
-}
-
-h1 {
-    color: #333;
-}
-
-ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-li {
-    margin-bottom: 10px;
-}
-
-/* 特定のページのスタイル */
-/* index.html */
-body#index {
-    background-color: #f2f2f2;
-}
-
-/* page1.html */
-body#page1 {
-    background-color: #e6f2ff;
-}
-
-/* page2.html */
-body#page2 {
-    background-color: #ffe6e6;
-}
+h1 { color: #F0A050; }
+h1 { color: #F0A050; }
+th, td { border: dashed thick black; }
+th.important { color:red; }
+p.sample1 {border:double 20px #0000ff;}
+p.sample2 {border:inset 20px #ff0000;}
+p.sample3 {margin:40px 40px;padding: 20px;border:medium solid #ff00ff;}
